--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "noImplicitAny": false, //???
+    "typeRoots": ["./node_modules/@types", "./src"],
     "lib": [
       "dom",
       "dom.iterable",
